--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,9 +42,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.isocalendar.fullyear.svg
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
