--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,13 +14,17 @@ on:
     - master
     
   
-
 jobs:
   generate:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
     steps:
+      - name: Set node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk@master
