--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,8 +21,8 @@ jobs:
     
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v2
+      - name: generate-snake-game-from-github-contribution-grid
+        uses: Platane/snk@v2.2.0
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
